ARRANGE GERE SYSTEM PART

--- a/index.html
+++ b/index.html
@@ -1,17 +1,16 @@
+<!-- index.html -->
 <!doctype html>
-<html lang="en">
+<html lang="fr">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/luxura-logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Electronics Decor E-commerce</title>
-    <meta name="description" content="Découvrez notre collection premium de tablettes enfants, miroirs lumineux, éclairages LED et accessoires de décoration moderne au Cameroun." />
-    <meta property="og:title" content="LUXURA237 - Produits Premium" />
-    <meta property="og:description" content="Votre destination premium pour les produits électroniques et décoratifs de qualité au Cameroun." />
+    <title>LUXURA™ - Électronique & Import</title>
+    <meta name="description" content="LUXURA™ - Importateur et distributeur d'équipements électroniques haut de gamme. Smartphones, TV, ordinateurs, accessoires." />
+    <meta property="og:title" content="LUXURA™ - Électronique & Import" />
+    <meta property="og:description" content="Découvrez notre sélection d'appareils électroniques importés de Chine, Corée, Japon et Dubaï." />
+    <meta property="og:image" content="/luxura-og.jpg" />
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="LUXURA237 - Produits Premium" />
-    <meta name="twitter:description" content="Collection premium de produits électroniques et décoratifs au Cameroun" />
-    <meta name="twitter:image" content="https://bolt.new/static/og_default.png" />
   </head>
   <body>
     <div id="root"></div>
