ARRANGE GERE SYSTEM PART

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="LUXURA™ - Importateur et distributeur d'équipements électroniques haut de gamme. Smartphones, TV, ordinateurs, accessoires." />
     <meta property="og:title" content="LUXURA™ - Électronique & Import" />
     <meta property="og:description" content="Découvrez notre sélection d'appareils électroniques importés de Chine, Corée, Japon et Dubaï." />
-    <meta property="og:image" content="/luxura-og.jpg" />
+    <meta property="og:image" content="/logo.png" />
     <meta name="twitter:card" content="summary_large_image" />
   </head>
   <body>
